--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 </head>
 
 <body>
-
-	<div class="bg">
-		<img src="./img/bg.png">
-	</div>
-
 	<div class="header">
-		<div class="logo"><a href="#"><img src="./img/logo.svg"></a></div>
-		<div class="number"><a href="#">+7 (777) 777-77-77</a></div>
-		<ul class="menu">
-			<li><a href="">Отзывы</a></li>
-			<li><a href="">Тарифы</a></li>
-			<li><a href="">Преимущества</a></li>
-			<li><a href="">Услуги</a></li>
-		</ul>
+		<div class="wrapper">
+			<div class="logo"><a href="#"><img src="./img/logo.svg"></a></div>
+			<div class="number"><a href="#">+7 (777) 777-77-77</a></div>
+			<ul class="menu">
+				<li><a href="">Отзывы</a></li>
+				<li><a href="">Тарифы</a></li>
+				<li><a href="">Преимущества</a></li>
+				<li><a href="">Услуги</a></li>
+			</ul>
+		</div>
 	</div>
 
-	<div class="title">
-		<h1>Современное пространство<br>для вашего развития</h1>
+	<div class="preview-scrren bg">
+		<img src="./img/bg.png">
+
+		<div class="title">
+			<h1>Современное пространство<br>для вашего развития</h1>
+		</div>
 	</div>
 
 </body>
