--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="./fonts.css" rel="stylesheet" />
 	<!-- сбрасывает стили ненужные -->
 	<link href="./null.css" rel="stylesheet" />
 	<link href="./style.css" rel="stylesheet" />
